--- a/css/main.scss
+++ b/css/main.scss
@@ -9,6 +9,7 @@
 @import "./blocks/button";
 @import "./blocks/main";
 @import "./blocks/wrapper";
+@import "./blocks/container";
 @import "./blocks/grid-base";
 @import "./blocks/title";
 @import "./blocks/main-navigation";
@@ -33,6 +34,10 @@
 @import "./blocks/address-list";
 @import "./blocks/site-developers";
 @import "./blocks/map";
+@import "./blocks/simple-gallery";
+@import "./blocks/simple-gallery-four";
+@import "./blocks/text-and-image";
+@import "./blocks/centered-block";
 
 // sections
 @import "./sections/header";
