--- a/css/sections/_section.scss
+++ b/css/sections/_section.scss
@@ -4,17 +4,17 @@
 
   &--black {
     background-color: #000;
-    color: #fff;
+    color: #b2b2b2;
     margin-top: 45px;
     margin-bottom: 45px;
     padding-top: 70px;
     padding-bottom: 70px;
 
     .title {
-      color: inherit;
+      color: #fff;
     }
     a {
-      color: inherit;
+      color: #fff;
     }
   }
 
