--- a/css/blocks/_simple-gallery-three.scss
+++ b/css/blocks/_simple-gallery-three.scss
@@ -1,12 +1,17 @@
-.simple-gallery {
+.simple-gallery-three {
+  margin-top: 55px;
+  margin-bottom: 55px;
   &__list {
     list-style: none;
     margin: 0;
     padding: 0;
     display: grid;
+    gap: 32px;
     width: 100%;
     max-width: 100%;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    max-width: max-content;
+    margin: 0 auto;
   }
   &__link {
     display: block;
