--- a/css/blocks/_content-group.scss
+++ b/css/blocks/_content-group.scss
@@ -3,13 +3,31 @@
   gap: 32px;
   grid-template-columns: auto 1fr;
   align-items: flex-start;
+
   &:not(:last-of-type) {
-    margin-bottom: 40px;
+    margin-bottom: 36px;
   }
 
 
   img {
     width: 96px;
     display: block;
+  }
+
+  p {
+    margin-top: 0;
+  }
+
+  &+.centered-block {
+    margin-top: -12px;
+  }
+
+  @media (max-width: 767px) {
+    gap: 16px;
+    grid-template-columns: 1fr;
+    &__left {
+      max-width: max-content;
+      margin: 0 auto;
+    }
   }
 }
