--- a/css/main.scss
+++ b/css/main.scss
@@ -43,6 +43,7 @@
 @import "./blocks/content-group";
 @import "./blocks/logos";
 @import "./blocks/photo-gallery";
+@import "./blocks/text-content";
 
 // sections
 @import "./sections/header";
