--- a/css/blocks/_buttons-grid.scss
+++ b/css/blocks/_buttons-grid.scss
@@ -9,11 +9,11 @@
     max-width: 100%;
   }
 
-  @media (max-width: 1023px) {
-    gap: 16px;
-    max-width: 100%;
-    grid-template-columns: 1fr;
-  }
+  // @media (max-width: 1023px) {
+  //   gap: 16px;
+  //   max-width: 100%;
+  //   grid-template-columns: 1fr;
+  // }
 
 
 
