--- a/css/blocks/_photo-gallery.scss
+++ b/css/blocks/_photo-gallery.scss
@@ -1,5 +1,6 @@
 .photo-gallery {
-  margin-top: 48px;
+  margin-top: 42px;
+
   &__list {
     list-style: none;
     padding: 0;
@@ -10,13 +11,23 @@
     width: 100%;
 
   }
+
   &__link {
     display: block;
     width: 100%;
+
     img {
       display: block;
       width: 100%;
       max-width: 100%;
+    }
+  }
+
+  @media (max-width: 767px) {
+    &__list {
+      gap: 16px;
+      grid-template-columns: repeat(1, 1fr);
+
     }
   }
 }
